--- a/genratorweb/src/main/resources/application.yaml
+++ b/genratorweb/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://60.205.4.182:3306/shirojwt?useSSL=false&useUnicode=true&characterEncoding=utf-8
     username: root
-    password: Zhou%236513
+    password: *******
     # 使用Druid数据源
 #    type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
